--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node bin/www",
     "dev": "./node_modules/.bin/nodemon app",
-    "prd": "pm2 start bin/www",
+    "start": "NODE_ENV=production pm2 start app.js --name 'data.laimeiyun.cn' --no-autorestart",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -13,9 +12,7 @@
     "koa": "^2.5.2",
     "koa-bodyparser": "^4.2.1",
     "koa-helmet": "^4.0.0",
-    "koa-json": "^2.0.2",
     "koa-onerror": "^4.0.0",
-    "koa-ratelimit": "^4.1.2",
     "koa-router": "^7.4.0",
     "koa2-cors": "^2.0.6",
     "mysql2": "^1.5.3",
