--- a/config.json
+++ b/config.json
@@ -4,6 +4,7 @@
   "database": {
     "host": "10.0.0.107",
     "user": "test",
-    "password": "123456"
+    "password": "123456",
+    "database": "laimeiyun_data"
   }
 }
