--- a/config.json
+++ b/config.json
@@ -2,9 +2,9 @@
   "port": 3040,
   "version": "v1",
   "database": {
-    "host": "10.0.0.107",
-    "user": "test",
-    "password": "123456",
-    "database": "laimeiyun_data"
+    "host": "",
+    "port": 1,
+    "user": "1",
+    "password": "1"
   }
 }
